syntax = "proto3";

package goim.comet;
option go_package = "grpc";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

/*
 * v1.0.0
 * protocol
 */
message Proto {
    int32 ver = 1 [(gogoproto.jsontag) = "ver"];
    int32 op = 2 [(gogoproto.jsontag) = "op"];
    int32 seq = 3 [(gogoproto.jsontag) = "seq"];
    bytes body = 4 [(gogoproto.jsontag) = "body"];
}

message Empty{}

message PushMsgReq {
    repeated string keys = 1;
    int32 protoOp = 3;
    Proto proto = 2;
}

message PushMsgReply {}

message BroadcastReq{
    int32 protoOp = 1;
    Proto proto = 2;
    int32 speed = 3;
}

message BroadcastReply{}

message BroadcastRoomReq {
    string roomID = 1;
    Proto proto = 2;
}

message BroadcastRoomReply{}

message RoomsReq{}

message RoomsReply {
    option (gogoproto.goproto_stringer) = false;
    map<string,bool> rooms = 1;
}

message OnlinesReq {}

message OnlinesReply {
    int64 hostOnline = 1;
    int64 tcpOnline = 2;
    int64 wsOnline = 3;
    map<string, int64> roomOnlines = 4;
    map<int64, int64> midOnlines = 5;
}

message MessagesReq {}

message MessagesReply {
    repeated MsgStat msgStats = 1;
}

message MsgStat {
    int32 msgType  = 1;
    uint64 count = 2;
    double speed = 3; 
}

service Comet { 
    // Ping Service 
    rpc Ping(Empty) returns(Empty); 
    // Close Service 
    rpc Close(Empty) returns(Empty); 
    // PushMsg push by key or mid
    rpc PushMsg(PushMsgReq) returns (PushMsgReply);
    // Broadcast send to every enrity
    rpc Broadcast(BroadcastReq) returns (BroadcastReply);
    // BroadcastRoom broadcast to one room
    rpc BroadcastRoom(BroadcastRoomReq) returns (BroadcastRoomReply);
    // Rooms get all rooms
    rpc Rooms(RoomsReq) returns (RoomsReply);
    // Online stats
    rpc Onlines(OnlinesReq) returns (OnlinesReply);
    // Message stats
    rpc Messages(MessagesReq) returns (MessagesReply);
}
